# rts

./: README.md
benchmarks/dvs-gesture/: CMakeLists.txt  main.cpp
benchmarks/dvs-gesture/models/rsnn-400-f16/: b_fc1  w_fc1  w_fc2  w_rec1
benchmarks/dvs-gesture/models/rsnn-400-f32/: w_fc2  w_rec2
benchmarks/model-parallelism/: CMakeLists.txt  main.cpp
benchmarks/nmnist/: CMakeLists.txt  main.cpp
benchmarks/nmnist/models/fcsnn-800-f32/: b_fc1  b_fc2  w_fc2
benchmarks/poker-dvs/: CMakeLists.txt  main.cpp
benchmarks/poker-dvs/models/rsnn-400-f16/: b_fc1  b_fc2  w_rec1  w_rec2
benchmarks/poker-dvs/models/rsnn-400-f32/: b_fc1  w_fc1  w_fc2  w_rec1  w_rec2
benchmarks/straight-line/: CMakeLists.txt  main.cpp
rts/: CMakeLists.txt  buffers.cpp  buffers.hpp  network.cpp  network.hpp  rt_threads.cpp  rt_threads.hpp  tensor.cpp  tensor.hpp  util.h
rts/include/: buffers.hpp  network.hpp  rt_threads.hpp  signal.hpp  tensor.hpp  threads.hpp  util.h
rts/include/layers/: fr_linear_lif.hpp  full_rec_linear_lif.hpp  layer.hpp  linear_lif.hpp  rec_linear_lif.hpp
rts/layers/: fr_linear_lif.cpp  fr_linear_lif.hpp  layer.cpp  layer.hpp  linear_lif.cpp  linear_lif.hpp  r_linear_lif.cpp  r_linear_lif.hpp  rec_linear_lif.cpp  rec_linear_lif.hpp
rts/neurons/: lif.hpp
rts/src/: buffers.cpp  network.cpp  rt_threads.cpp  signal.cpp  tensor.cpp  threads.cpp
rts/src/layers/: fr_linear_lif.cpp  full_rec_linear_lif.cpp  layer.cpp  linear_lif.cpp  rec_linear_lif.cpp
rts/test/: CMakeLists.txt  test_util.h
rts/test/full_rec_linear_lif/: test_layer.cpp  test_layer_f16.cpp  test_layer_f32.cpp  test_network.cpp  test_network_f16_n_1.cpp  test_network_f16_n_2.cpp  test_network_f16_n_4.cpp  test_network_f32_n_1.cpp  test_network_f32_n_2.cpp  test_network_f32_n_4.cpp
rts/test/full_rec_linear_lif/data/inputs/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+580 more)
rts/test/full_rec_linear_lif/data/outputs/layer_f16/: 0  1  10  100  102  103  104  105  106  107  108  11  112  113  114  115  116  117  118  12  120  121  123  124  125  130  131  132  134  136  137  138  139  141  142  143  144  145  146  147  (+403 more)
rts/test/full_rec_linear_lif/data/outputs/layer_f32/: 100  101  102  104  105  109  110  111  119  122  124  125  126  127  128  129  13  131  132  133  134  135  136  137  138  139  14  140  141  142  143  144  145  146  147  148  149  15  150  151  (+405 more)
rts/test/full_rec_linear_lif/data/outputs/net_f16/: 105  107  125  128  163  170  206  224  227  236  245  268  272  286  295  310  311  316  32  340  376  377  4  40  407  411  433  434  449  455  462  477  497  502  506  508  513  514  520  526  (+9 more)
rts/test/full_rec_linear_lif/data/outputs/net_f32/: 100  101  117  12  121  152  162  175  189  19  197  228  24  280  282  30  319  34  340  347  381  390  408  431  460  477  502  516  526  544  557  561  571  587  595  62  94
rts/test/full_rec_linear_lif/models/rsnn-400-f16/: b_fc2  w_rec2
rts/test/full_rec_linear_lif/models/rsnn-400-f32/: b_fc1  b_fc2  w_fc1  w_rec1
rts/test/linear_lif/: test_layer.cpp  test_layer_f16.cpp  test_layer_f32.cpp  test_network.cpp  test_network_f16_n_1.cpp  test_network_f16_n_2.cpp  test_network_f16_n_5.cpp  test_network_f32_n_1.cpp  test_network_f32_n_2.cpp  test_network_f32_n_5.cpp
rts/test/linear_lif/data/inputs/: 0  1  10  100  101  104  105  106  107  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  135  136  137  (+236 more)
rts/test/linear_lif/data/outputs/layer_f16/: 10  101  102  103  104  105  106  107  108  11  110  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  135  136  137  138  (+245 more)
rts/test/linear_lif/data/outputs/layer_f32/: 0  1  10  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  135  (+238 more)
rts/test/linear_lif/data/outputs/net_f16/: 100  102  107  108  114  116  117  18  19  198  20  200  202  205  21  210  214  216  217  222  225  229  23  232  24  26  27  28  300  33  35  56  59  61  63  7  9  92  98
rts/test/linear_lif/data/outputs/net_f32/: 10  100  109  113  114  18  20  200  201  203  208  209  21  210  213  216  217  222  225  230  233  237  27  28  30  36  37  38  41  42  43  45  52  6  60  82  92  95  96  98
rts/test/linear_lif/models/fcsnn-1000-f16/: b_fc1  b_fc2  w_fc2
rts/test/linear_lif/models/fcsnn-1000-f32/: b_fc1  b_fc2  w_fc2
rts/test/rec_linear_lif/: test_layer.cpp  test_layer_f16.cpp  test_layer_f32.cpp  test_network.cpp  test_network_f16_n_1.cpp  test_network_f16_n_2.cpp  test_network_f16_n_4.cpp  test_network_f32_n_1.cpp  test_network_f32_n_2.cpp  test_network_f32_n_4.cpp
rts/test/rec_linear_lif/data/inputs/: 0  1  2  3  4  5  6
rts/test/rec_linear_lif/data/outputs/layer_f16/: 0  2  3  4
rts/test/rec_linear_lif/data/outputs/layer_f32/: 1  21  5
rts/test/rec_linear_lif/models/rsnn-400-f16/: w_fc1  w_fc2
rts/test/rec_linear_lif/models/rsnn-400-f32/: b_fc2
